# kenotex

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  README_CN.md
.github/workflows/: release.yml
docs/: default.toml
src/: lib.rs  main.rs
src/atoms/: mod.rs
src/atoms/applescript/: bear.rs  calendar.rs  mod.rs  notes.rs  obsidian.rs  reminders.rs
src/atoms/storage/: clipboard.rs  config_io.rs  draft_io.rs  external_editor.rs  file_watcher.rs  mod.rs
src/atoms/widgets/: confirm_overlay.rs  editor_widget.rs  hint_bar.rs  leader_popup.rs  list_item.rs  md_highlight.rs  mod.rs  processing_overlay.rs  status_bar.rs  wrap_calc.rs
src/coordinator/: app.rs  event_dispatcher.rs  mod.rs
src/molecules/: mod.rs
src/molecules/config/: keybindings.rs  mod.rs  themes.rs
src/molecules/distribution/: dispatcher.rs  mod.rs  parser.rs  time_parser.rs
src/molecules/editor/: buffer.rs  comment.rs  list_prefix.rs  markdown_fmt.rs  mod.rs  vim_mode.rs  visual_mode.rs
src/molecules/list/: archive_list.rs  draft_list.rs  file_change_handler.rs  mod.rs
src/types/: block.rs  config.rs  mod.rs  mode.rs  note.rs  theme.rs
tests/: cjk_edge_cases.rs
