[package]
name = "kenotex"
version = "0.1.0"
edition = "2024"
description = "A Vim-style TUI note-taking app with smart distribution to Reminders, Calendar, and Notes"
authors = ["Kenneth X"]
license = "MIT"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
chrono-english = "0.1"
uuid = { version = "1.0", features = ["v4"] }
dirs = "5.0"
urlencoding = "2.1"
regex = "1.10"
anyhow = "1.0"
unicode-width = "0.2"
unicode-segmentation = "1.12"
notify = "7"
notify-debouncer-mini = "0.5"

[profile.release]
lto = true
codegen-units = 1
strip = true
